force-app/main/default/objects/Test_Case_and_Defect_Report__c/Test_Case_and_Defect_Report__c.object-meta.xml
<CustomObject>
    <description>This object is loaded from excel to produce a report</description>
    <label>Test Case and Defect Report</label>
    <nameField>
        <label>Test Case Defects Rpt Object Nbr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Case and Defect Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>