force-app/main/default/objects/Test_Case_and_Defect_Report__c/fields/Defect_Assigned_to_Name_ref__c.field-meta.xml
<CustomField>
    <fullName>Defect_Assigned_to_Name_ref__c</fullName>
    <label>Defect Assigned to Name ref</label>
    <length>40</length>
    <type>Text</type>
</CustomField>