force-app/main/default/objects/Test_Case_and_Defect_Report__c/fields/Defect_Created_Date_ref__c.field-meta.xml
<CustomField>
    <fullName>Defect_Created_Date_ref__c</fullName>
    <label>Defect Created Date ref</label>
    <type>Date</type>
</CustomField>