force-app/main/default/objects/Test_Case_and_Defect_Report__c/fields/Defect_ID_Ref__c.field-meta.xml
<CustomField>
    <fullName>Defect_ID_Ref__c</fullName>
    <label>Defect ID Ref</label>
    <length>10</length>
    <type>Text</type>
</CustomField>