force-app/main/default/objects/Test_Case_and_Defect_Report__c/fields/Defect_Priority__c.field-meta.xml
<CustomField>
    <fullName>Defect_Priority__c</fullName>
    <description>Defect object Priority field</description>
    <label>Defect Priority</label>
    <length>30</length>
    <type>Text</type>
</CustomField>