force-app/main/default/objects/Test_Case_and_Defect_Report__c/fields/TC_High_Level_Requirement_ref__c.field-meta.xml
<CustomField>
    <fullName>TC_High_Level_Requirement_ref__c</fullName>
    <label>TC_High Level Requirement ref</label>
    <length>30</length>
    <type>Text</type>
</CustomField>