force-app/main/default/objects/Test_Case_and_Defect_Report__c/fields/TC_Project_ref__c.field-meta.xml
<CustomField>
    <fullName>TC_Project_ref__c</fullName>
    <label>TC_Project_ref</label>
    <length>30</length>
    <type>Text</type>
</CustomField>