force-app/main/default/objects/Test_Case_and_Defect_Report__c/fields/Test_Case_ID_Ref__c.field-meta.xml
<CustomField>
    <fullName>Test_Case_ID_Ref__c</fullName>
    <label>Test Case ID Ref</label>
    <length>10</length>
    <type>Text</type>
</CustomField>