force-app/main/default/objects/Test_Case_and_Defect_Report__c/fields/Test_Status_ref__c.field-meta.xml
<CustomField>
    <fullName>Test_Status_ref__c</fullName>
    <label>Test Status ref</label>
    <length>30</length>
    <type>Text</type>
</CustomField>